--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "number-input-controls",
-  "version": "1.0.0",
+  "version": "1.1.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,8 @@
   "files": [
     "demo/",
     "dist/",
-    "README.md"
+    "README.md",
+    "demo/demo.png"
   ],
   "keywords": [
     "bootstrap",
